--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,15 @@
 @import "tailwindcss";
 
+.font-handwritten {
+  font-family: var(--font-zeyada);
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
   --primary: #5A5A5A;
   --secondary: #191919;
+  --font-zeyada: "Zeyada", cursive;
 }
 
 @theme inline {
@@ -12,6 +17,10 @@
   --color-foreground: var(--foreground);
   --color-primary: var(--primary);
   --color-secondary: var(--secondary);
+}
+
+* {
+  scroll-behavior: smooth;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -25,4 +34,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   /* font-family: Arial, Helvetica, sans-serif; */
+}
+
+.polaroid {
+  /* box-shadow: -9px 28px 20px rgba(0, 0, 0, 0.45); */
+  /* box-shadow: rgba(0, 0, 0, 0.45) 0px 20px 30px -10px; */
 }
